src/test/resources/public/input/typechecking/fail/double_decl/fail12.jova
class Test{
  Test (int y){
    int x;
    int y;
    int z;
    string x;
  }
}